samples/_failures_safe/1761481642_453c2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_849b3521.c: In function ‘main’:
./samples/SAFE/__tmp_849b3521.c:147:16: error: missing terminating " character
  147 |         printf("Addition
      |                ^~~~~~~~~
./samples/SAFE/__tmp_849b3521.c:147:9: error: expected expression at end of input
  147 |         printf("Addition
      |         ^~~~~~
./samples/SAFE/__tmp_849b3521.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_849b3521.c:147:9: error: expected declaration or statement at end of input
